src/components/SubmitForm/form.module.scss
.submitForm {
  padding-block-end: var(--space-2xl);
}

.header {
  text-align: center;
  font-size: var(--step-4);
  padding-block: var(--space-m) var(--space-xl);
}

.submitButton {
  display: flex;
  align-items: center;
  gap: var(--space-xs);
  background: var(--mauve-12);
  color: var(--mauve-1);
  border: none;
  cursor: pointer;
  border-radius: var(--radius-full);
  padding-block: var(--space-xs);
  padding-inline: var(--space-s) var(--space-m);
  margin-inline: auto;
  font-weight: var(--font-weight-bold);

  @media (hover: hover) and (pointer: fine) {
    &:hover {
      background: var(--violet-9);
      color: white;
    }
  }

  &[disabled] {
    opacity: 0.7;
    cursor: default;
  }
}

@keyframes spin {
  to {
    transform: rotate(360deg);
  }
}

.spinner {
  animation: spin 0.7s linear infinite;
}

